--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
 
             <div class="box">
-                <img src="./img/IMG_ADAMA.JPG" />
+                <img src="./img/IMG_ADAMA.jpg" />
                 
             </div>
             <div class="box">
